@@ -24,4 +24,4 @@
 # *  e-mail address 'scipion@cnb.csic.es'
 # *
 # **************************************************************************
-__version__ = '2.4'
+__version__ = '2.4.1'
