@@ -26,13 +26,12 @@
 # **************************************************************************
 import logging
 import sys
-
-logger = logging.getLogger()
-
 import os
-import csv
+import numpy as np
 from functools import lru_cache
 from abc import abstractmethod
+
+logger = logging.getLogger()
 
 from metadataviewer.model import Page, ImageRenderer
 
@@ -321,23 +320,31 @@ class ObjectManager:
         selection = table.getSelection().getSelection()
         columns = table.getColumns()
         filepath = self._gui.getSaveFileName()
-        if filepath:
-            with open(filepath, 'w', newline='') as csvFile:
-                csvWriter = csv.writer(csvFile)
-                header_data = [col.getName() for col in columns]
-                csvWriter.writerow(header_data)
 
-                if selection and len(selection) > 1:
+        if filepath:
+            with open(filepath, 'w', encoding='utf-8') as txtFile:
+                # Write headers
+                header_data = [col.getName() for col in columns]
+                txtFile.write(",".join(header_data) + "\n")
+
+                def formatValue(value):
+                    if isinstance(value, np.ndarray):
+                        return str(value).replace(",", "").replace('\n', '')  # Remove commas but keep brackets
+                    return str(value)
+
+                if selection and len(selection) > 1:  # Export the selected rows
                     for row, rowId in enumerate(selection):
-                        rowValues = self.getCurrentRow(table,  rowId - 1).getValues()
+                        rowValues = self.getCurrentRow(table, rowId - 1).getValues()
                         if rowValues is not None:
-                            csvWriter.writerow(rowValues)
-                else:  # Export all the table
+                            formattedValues = [formatValue(val) for val in rowValues]
+                            txtFile.write(",".join(formattedValues) + "\n")
+                else:  # Export the entire table
                     rowCount = self.getTableRowCount(tableName)
                     for rowId in range(rowCount):
                         rowValues = self.getCurrentRow(table, rowId).getValues()
                         if rowValues is not None:
-                            csvWriter.writerow(rowValues)
+                            formattedValues = [formatValue(val) for val in rowValues]
+                            txtFile.write(",".join(formattedValues) + "\n")
 
 
 
